@@ -1,0 +1,82 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <artifactId>bcrypt-parent</artifactId>
+        <groupId>at.favre.lib</groupId>
+        <version>0.5.0</version>
+        <relativePath>../../</relativePath>
+    </parent>
+
+    <artifactId>benchmark-jmh</artifactId>
+    <packaging>jar</packaging>
+
+    <name>BCrypt JMH Benchmark</name>
+
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+        <jmh.version>1.21</jmh.version>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.github.chrisdchristo</groupId>
+                <artifactId>capsule-maven-plugin</artifactId>
+                <version>1.5.1</version>
+                <configuration>
+                    <appClass>org.openjdk.jmh.Main</appClass>
+                    <fileDesc>-full</fileDesc>
+                    <type>fat</type>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>build-fat-jar</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>0.5.0</version>
+            <classifier>optimized</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>${project.jbcryptVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${project.bcVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.fzakaria</groupId>
+            <artifactId>ascii85</artifactId>
+            <version>1.1</version>
+        </dependency>
+    </dependencies>
+</project>
